--- a/popup.html
+++ b/popup.html
@@ -1,2 +1,3 @@
 <meta charset="utf-8"> <!-- Remove warning from logs -->
 <script src="popup.js"></script> <!-- CSP blocks scripts at 'self' -->
+<span id="output"></span> <!-- Display errors to user, don't silently fail -->
