Move i18n to a shared folder

--- a/content/settings/settings.html
+++ b/content/settings/settings.html
@@ -37,7 +37,8 @@
 			<input id="button_save" type="button" value="Save settings">
 		</form>
 
+		<script src="../_shared/i18n.js"></script>
+
 		<script src="settings.js"></script>
-		<script src="i18n.js"></script>
 	</body>
 </html>
