--- a/content/button/panel.html
+++ b/content/button/panel.html
@@ -1,3 +1,24 @@
-<meta charset="utf-8"> <!-- Remove warning from logs -->
-<script src="panel.js"></script> <!-- CSP blocks scripts at 'self' -->
-<span id="output"></span> <!-- Display errors to user, don't silently fail -->
+<!doctype html>
+<html>
+	<head>
+		<meta charset="utf-8">
+
+		<link rel="stylesheet" href="panel.css">
+	</head>
+
+	<body>
+		<ul id="menu" class="menu">
+			<li class="menu-item"><a id="open_popup" data-i18n-message="button_menu-item_open"></a></li>
+			<li class="menu-item"><a id="restore_window" class="disabled" data-i18n-message="button_menu-item_restore"></a></li>
+
+			<li id="submenu-restore_window-container" class="hidden">
+				<ul id="submenu-restore_window-menu" class="menu-sub">
+					<!-- Auto generated content goes here -->
+				</ul>
+			</li>
+		</ul>
+
+		<script src="panel.js"></script>
+		<script src="../_shared/i18n.js"></script>
+	</body>
+</html>
