--- a/content/settings/settings.html
+++ b/content/settings/settings.html
@@ -10,6 +10,24 @@
 
 		<form>
 			<fieldset>
+				<legend data-i18n-message="settings_button"></legend>
+
+				<table class="col-spacing">
+					<tr>
+						<td>
+							<label for="menu-item_link" data-i18n-message="settings_button-action"></label>
+						</td>
+						<td>
+							<select id="button-action" data-setting>
+								<option value="MENU" data-i18n-message="settings_button-action_menu"></option>
+								<option value="POPUP" data-i18n-message="settings_button-action_popup"></option>
+							</select>
+						</td>
+					</tr>
+				</table>
+			</fieldset>
+
+			<fieldset>
 				<legend data-i18n-message="settings_context-menus"></legend>
 
 				<table>
