Add tbody tag to tables in settings

--- a/content/settings/settings.html
+++ b/content/settings/settings.html
@@ -13,17 +13,19 @@
 				<legend data-i18n-message="settings_button"></legend>
 
 				<table class="col-spacing">
-					<tr>
-						<td>
-							<label for="menu-item_link" data-i18n-message="settings_button-action"></label>
-						</td>
-						<td>
-							<select id="button-action" data-setting>
-								<option value="MENU" data-i18n-message="settings_button-action_menu"></option>
-								<option value="POPUP" data-i18n-message="settings_button-action_popup"></option>
-							</select>
-						</td>
-					</tr>
+					<tbody>
+						<tr>
+							<td>
+								<label for="menu-item_link" data-i18n-message="settings_button-action"></label>
+							</td>
+							<td>
+								<select id="button-action" data-setting>
+									<option value="MENU" data-i18n-message="settings_button-action_menu"></option>
+									<option value="POPUP" data-i18n-message="settings_button-action_popup"></option>
+								</select>
+							</td>
+						</tr>
+					</tbody>
 				</table>
 			</fieldset>
 
@@ -31,22 +33,24 @@
 				<legend data-i18n-message="settings_context-menus"></legend>
 
 				<table>
-					<tr>
-						<td>
-							<input id="menu-item_tab" type="checkbox" data-setting>
-						</td>
-						<td>
-							<label for="menu-item_tab" data-i18n-message="settings_context-menus_tabs"></label>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<input id="menu-item_link" type="checkbox" data-setting>
-						</td>
-						<td>
-							<label for="menu-item_link" data-i18n-message="settings_context-menus_links"></label>
-						</td>
-					</tr>
+					<tbody>
+						<tr>
+							<td>
+								<input id="menu-item_tab" type="checkbox" data-setting>
+							</td>
+							<td>
+								<label for="menu-item_tab" data-i18n-message="settings_context-menus_tabs"></label>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<input id="menu-item_link" type="checkbox" data-setting>
+							</td>
+							<td>
+								<label for="menu-item_link" data-i18n-message="settings_context-menus_links"></label>
+							</td>
+						</tr>
+					</tbody>
 				</table>
 			</fieldset>
 
