Add setting for width/height of popups
Ref #7

--- a/content/settings/settings.html
+++ b/content/settings/settings.html
@@ -54,6 +54,30 @@
 				</table>
 			</fieldset>
 
+			<fieldset>
+				<legend data-i18n-message="settings_popup-position"></legend>
+
+				<div class="description" data-i18n-message="settings_popup-position_description"></div>
+
+				<table>
+					<thead>
+						<th data-i18n-message="settings_popup-position_width"></th>
+						<th data-i18n-message="settings_popup-position_height"></th>
+					</thead>
+
+					<tbody>
+						<tr>
+							<td>
+								<input id="popup-position_width_default" type="number" data-setting>
+							</td>
+							<td>
+								<input id="popup-position_height_default" type="number" data-setting>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</fieldset>
+
 			<br>
 
 			<input id="button_save" type="button" value="Save settings">
