--- a/content/settings/settings.html
+++ b/content/settings/settings.html
@@ -61,8 +61,8 @@
 
 				<table>
 					<thead>
-						<th data-i18n-message="settings_popup-position_width"></th>
-						<th data-i18n-message="settings_popup-position_height"></th>
+						<th data-i18n-message="settings_popup-position_default_width"></th>
+						<th data-i18n-message="settings_popup-position_default_height"></th>
 					</thead>
 
 					<tbody>
@@ -72,6 +72,38 @@
 							</td>
 							<td>
 								<input id="popup-position_height_default" type="number" data-setting>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+
+				<table id="popup-position" data-setting-list>
+					<thead>
+						<th data-i18n-message="settings_popup-position_domain" data-i18n-title="settings_popup-position_domain_description"></th>
+						<th data-i18n-message="settings_popup-position_width"></th>
+						<th data-i18n-message="settings_popup-position_height"></th>
+					</thead>
+
+					<tbody>
+						<tr class="hidden" data-setting-list-item-template>
+							<td>
+								<input type="text" data-setting-id="domain">
+							</td>
+							<td>
+								<input type="number" data-setting-id="width">
+							</td>
+							<td>
+								<input type="number" data-setting-id="height">
+							</td>
+
+							<td>
+								<input type="button" value="×" data-setting-list-item-delete>
+							</td>
+						</tr>
+
+						<tr>
+							<td>
+								<input type="button" value="+" data-setting-list-item-add>
 							</td>
 						</tr>
 					</tbody>
