Add context menu item for bookmarks

--- a/content/settings/settings.html
+++ b/content/settings/settings.html
@@ -36,10 +36,10 @@
 					<tbody>
 						<tr>
 							<td>
-								<input id="menu-item_tab" type="checkbox" data-setting>
+								<input id="menu-item_bookmark" type="checkbox" data-setting>
 							</td>
 							<td>
-								<label for="menu-item_tab" data-i18n-message="settings_context-menus_tabs"></label>
+								<label for="menu-item_bookmark" data-i18n-message="settings_context-menus_bookmarks"></label>
 							</td>
 						</tr>
 						<tr>
@@ -48,6 +48,14 @@
 							</td>
 							<td>
 								<label for="menu-item_link" data-i18n-message="settings_context-menus_links"></label>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<input id="menu-item_tab" type="checkbox" data-setting>
+							</td>
+							<td>
+								<label for="menu-item_tab" data-i18n-message="settings_context-menus_tabs"></label>
 							</td>
 						</tr>
 					</tbody>
