Add context menu to pages for popup/restore
Ref #15

--- a/content/settings/settings.html
+++ b/content/settings/settings.html
@@ -52,6 +52,14 @@
 						</tr>
 						<tr>
 							<td>
+								<input id="menu-item_page" type="checkbox" data-setting>
+							</td>
+							<td>
+								<label for="menu-item_page" data-i18n-message="settings_context-menus_pages"></label>
+							</td>
+						</tr>
+						<tr>
+							<td>
 								<input id="menu-item_tab" type="checkbox" data-setting>
 							</td>
 							<td>
