Add automatic popup option for specified domains
Ref #12

--- a/content/settings/settings.html
+++ b/content/settings/settings.html
@@ -98,6 +98,7 @@
 						<th data-i18n-message="settings_popup-position_domain" data-i18n-title="settings_popup-position_domain_description"></th>
 						<th data-i18n-message="settings_popup-position_width"></th>
 						<th data-i18n-message="settings_popup-position_height"></th>
+						<th data-i18n-message="settings_popup-position_autopopup"></th>
 					</thead>
 
 					<tbody>
@@ -110,6 +111,10 @@
 							</td>
 							<td>
 								<input type="number" data-setting-id="height">
+							</td>
+
+							<td>
+								<input type="checkbox" data-setting-id="autopopup">
 							</td>
 
 							<td>
