--- a/content/settings/settings.html
+++ b/content/settings/settings.html
@@ -103,7 +103,7 @@
 
 				<table id="rules" data-setting-list>
 					<thead>
-						<th data-i18n-message="settings_popup-position_type"></th>
+						<th data-i18n-message="settings_popup-position_type" data-i18n-title="settings_popup-rule_applies_format"></th>
 						<th></th>
 						<th data-i18n-message="settings_popup-position_x"></th>
 						<th data-i18n-message="settings_popup-position_y"></th>
