Add shortcut to settings from button menu
Ref #19

--- a/content/button/panel.html
+++ b/content/button/panel.html
@@ -7,16 +7,22 @@
 	</head>
 
 	<body>
-		<ul id="menu" class="menu">
-			<li class="menu-item"><a id="open_popup" data-i18n-message="button_menu-item_open"></a></li>
-			<li class="menu-item"><a id="restore_window" class="disabled" data-i18n-message="button_menu-item_restore"></a></li>
+		<div class="wrapper">
+			<ul id="menu" class="menu">
+				<li class="menu-item"><a id="open_popup" data-i18n-message="button_menu-item_open"></a></li>
+				<li class="menu-item"><a id="restore_window" class="disabled" data-i18n-message="button_menu-item_restore"></a></li>
 
-			<li id="submenu-restore_window-container" class="hidden">
-				<ul id="submenu-restore_window-menu" class="menu-sub">
-					<!-- Auto generated content goes here -->
-				</ul>
-			</li>
-		</ul>
+				<li id="submenu-restore_window-container" class="hidden">
+					<ul id="submenu-restore_window-menu" class="menu-sub">
+						<!-- Auto generated content goes here -->
+					</ul>
+				</li>
+			</ul>
+
+			<ul class="footer">
+				<li class="menu-item"><a id="open-settings" data-i18n-message="button_menu-item_settings"></a></li>
+			</ul>
+		</div>
 
 		<script src="panel.js"></script>
 		<script src="../_shared/i18n.js"></script>
