Add toggle for forcing position/size
Ref #39

--- a/content/settings/settings.html
+++ b/content/settings/settings.html
@@ -70,6 +70,24 @@
 				</table>
 			</fieldset>
 
+
+			<fieldset>
+				<legend data-i18n-message="settings_workaround"></legend>
+
+				<table>
+					<tbody>
+						<tr>
+							<td>
+								<input id="workaround-force_position" type="checkbox" data-setting>
+							</td>
+							<td>
+								<label for="workaround-force_position" data-i18n-message="settings_workaround_force-position"></label>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</fieldset>
+
 			<fieldset>
 				<legend data-i18n-message="settings_popup-position"></legend>
 
