Modify i18n property names to comply with chromium
Allowed charset is only A-Z, a-z, 0-9, and _

Ref #45

--- a/content/button/panel.html
+++ b/content/button/panel.html
@@ -9,8 +9,8 @@
 	<body>
 		<div class="wrapper">
 			<ul id="menu" class="menu">
-				<li class="menu-item"><a id="open_popup" data-i18n-message="button_menu-item_open"></a></li>
-				<li class="menu-item"><a id="restore_window" class="disabled" data-i18n-message="button_menu-item_restore"></a></li>
+				<li class="menu-item"><a id="open_popup" data-i18n-message="button_menu_item_open"></a></li>
+				<li class="menu-item"><a id="restore_window" class="disabled" data-i18n-message="button_menu_item_restore"></a></li>
 
 				<li id="submenu-restore_window-container" class="hidden">
 					<ul id="submenu-restore_window-menu" class="menu-sub">
@@ -20,7 +20,7 @@
 			</ul>
 
 			<ul class="footer">
-				<li class="menu-item"><a id="open-settings" data-i18n-message="button_menu-item_settings"></a></li>
+				<li class="menu-item"><a id="open-settings" data-i18n-message="button_menu_item_settings"></a></li>
 			</ul>
 		</div>
 
