--- a/content/settings/settings.html
+++ b/content/settings/settings.html
@@ -16,12 +16,12 @@
 					<tbody>
 						<tr>
 							<td>
-								<label for="menu-item_link" data-i18n-message="settings_button-action"></label>
+								<label for="menu-item_link" data-i18n-message="settings_button_action"></label>
 							</td>
 							<td>
 								<select id="button-action" data-setting>
-									<option value="MENU" data-i18n-message="settings_button-action_menu"></option>
-									<option value="POPUP" data-i18n-message="settings_button-action_popup"></option>
+									<option value="MENU" data-i18n-message="settings_button_action_menu"></option>
+									<option value="POPUP" data-i18n-message="settings_button_action_popup"></option>
 								</select>
 							</td>
 						</tr>
@@ -30,7 +30,7 @@
 			</fieldset>
 
 			<fieldset>
-				<legend data-i18n-message="settings_context-menus"></legend>
+				<legend data-i18n-message="settings_context_menus"></legend>
 
 				<table>
 					<tbody>
@@ -39,7 +39,7 @@
 								<input id="menu-item_bookmark" type="checkbox" data-setting>
 							</td>
 							<td>
-								<label for="menu-item_bookmark" data-i18n-message="settings_context-menus_bookmarks"></label>
+								<label for="menu-item_bookmark" data-i18n-message="settings_context_menus_bookmarks"></label>
 							</td>
 						</tr>
 						<tr>
@@ -47,7 +47,7 @@
 								<input id="menu-item_link" type="checkbox" data-setting>
 							</td>
 							<td>
-								<label for="menu-item_link" data-i18n-message="settings_context-menus_links"></label>
+								<label for="menu-item_link" data-i18n-message="settings_context_menus_links"></label>
 							</td>
 						</tr>
 						<tr>
@@ -55,7 +55,7 @@
 								<input id="menu-item_page" type="checkbox" data-setting>
 							</td>
 							<td>
-								<label for="menu-item_page" data-i18n-message="settings_context-menus_pages"></label>
+								<label for="menu-item_page" data-i18n-message="settings_context_menus_pages"></label>
 							</td>
 						</tr>
 						<tr>
@@ -63,7 +63,7 @@
 								<input id="menu-item_tab" type="checkbox" data-setting>
 							</td>
 							<td>
-								<label for="menu-item_tab" data-i18n-message="settings_context-menus_tabs"></label>
+								<label for="menu-item_tab" data-i18n-message="settings_context_menus_tabs"></label>
 							</td>
 						</tr>
 					</tbody>
@@ -81,7 +81,7 @@
 								<input id="workaround_force-position" type="checkbox" data-setting>
 							</td>
 							<td>
-								<label for="workaround_force-position" data-i18n-message="settings_workaround_force-position"></label>
+								<label for="workaround_force-position" data-i18n-message="settings_workaround_force_position"></label>
 							</td>
 						</tr>
 						<tr>
@@ -89,12 +89,12 @@
 								<input id="workaround_popup-size" type="checkbox" data-setting>
 							</td>
 							<td>
-								<label for="workaround_popup-size" data-i18n-message="settings_workaround_popup-size"></label>
+								<label for="workaround_popup-size" data-i18n-message="settings_workaround_popup_size"></label>
 								<br />
-								<input id="workaround_popup-size_x" data-i18n-placeholder="settings_popup-position_x" size="3" type="number" data-setting>
-								<input id="workaround_popup-size_y" data-i18n-placeholder="settings_popup-position_y" size="3" type="number" data-setting>
-								<input id="workaround_popup-size_width" data-i18n-placeholder="settings_popup-position_width" size="3" type="number" data-setting>
-								<input id="workaround_popup-size_height" data-i18n-placeholder="settings_popup-position_height" size="3" type="number" data-setting>
+								<input id="workaround_popup-size_x" data-i18n-placeholder="settings_popup_position_x" size="3" type="number" data-setting>
+								<input id="workaround_popup-size_y" data-i18n-placeholder="settings_popup_position_y" size="3" type="number" data-setting>
+								<input id="workaround_popup-size_width" data-i18n-placeholder="settings_popup_position_width" size="3" type="number" data-setting>
+								<input id="workaround_popup-size_height" data-i18n-placeholder="settings_popup_position_height" size="3" type="number" data-setting>
 							</td>
 						</tr>
 					</tbody>
@@ -102,17 +102,17 @@
 			</fieldset>
 
 			<fieldset id="section_rules">
-				<legend data-i18n-message="settings_popup-position"></legend>
+				<legend data-i18n-message="settings_popup_position"></legend>
 
-				<div class="description" data-i18n-message="settings_popup-position_description"></div>
+				<div class="description" data-i18n-message="settings_popup_position_description"></div>
 
 				<table>
 					<thead>
-						<th data-i18n-message="settings_popup-position_default_enabled"></th>
-						<th data-i18n-message="settings_popup-position_default_x"></th>
-						<th data-i18n-message="settings_popup-position_default_y"></th>
-						<th data-i18n-message="settings_popup-position_default_width"></th>
-						<th data-i18n-message="settings_popup-position_default_height"></th>
+						<th data-i18n-message="settings_popup_position_default_enabled"></th>
+						<th data-i18n-message="settings_popup_position_default_x"></th>
+						<th data-i18n-message="settings_popup_position_default_y"></th>
+						<th data-i18n-message="settings_popup_position_default_width"></th>
+						<th data-i18n-message="settings_popup_position_default_height"></th>
 					</thead>
 
 					<tbody>
@@ -138,14 +138,14 @@
 
 				<table id="rules" data-setting-list>
 					<thead>
-						<th data-i18n-message="settings_popup-position_enabled"></th>
-						<th data-i18n-message="settings_popup-position_type" data-i18n-title="settings_popup-rule_applies_format"></th>
+						<th data-i18n-message="settings_popup_position_enabled"></th>
+						<th data-i18n-message="settings_popup_position_type" data-i18n-title="settings_popup_rule_applies_format"></th>
 						<th></th>
-						<th data-i18n-message="settings_popup-position_x"></th>
-						<th data-i18n-message="settings_popup-position_y"></th>
-						<th data-i18n-message="settings_popup-position_width"></th>
-						<th data-i18n-message="settings_popup-position_height"></th>
-						<th data-i18n-message="settings_popup-position_autopopup"></th>
+						<th data-i18n-message="settings_popup_position_x"></th>
+						<th data-i18n-message="settings_popup_position_y"></th>
+						<th data-i18n-message="settings_popup_position_width"></th>
+						<th data-i18n-message="settings_popup_position_height"></th>
+						<th data-i18n-message="settings_popup_position_autopopup"></th>
 					</thead>
 
 					<tbody>
@@ -156,8 +156,8 @@
 
 							<td>
 								<select data-setting-id="appliestype">
-									<option value="DOMAIN" data-i18n-message="settings_popup-position_type_domain"></option>
-									<option value="URL" data-i18n-message="settings_popup-position_type_url"></option>
+									<option value="DOMAIN" data-i18n-message="settings_popup_position_type_domain"></option>
+									<option value="URL" data-i18n-message="settings_popup_position_type_url"></option>
 								</select>
 							</td>
 
