Add browser-polyfill for chromium support
Ref #45

--- a/content/button/panel.html
+++ b/content/button/panel.html
@@ -24,7 +24,8 @@
 			</ul>
 		</div>
 
-		<script src="panel.js"></script>
+		<script src="../_shared/browser-polyfill.min.js"></script>
 		<script src="../_shared/i18n.js"></script>
+		<script src="panel.js"></script>
 	</body>
 </html>
