--- a/content/settings/settings.html
+++ b/content/settings/settings.html
@@ -200,8 +200,8 @@
 			<input id="button_save" type="button" value="Save settings">
 		</form>
 
+		<script src="../_shared/browser-polyfill.min.js"></script>
 		<script src="../_shared/i18n.js"></script>
-
 		<script src="settings.js"></script>
 	</body>
 </html>
